Added theme= to config.toml

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
-baseurl = "https://static.grinnell.edu"
+baseurl = "http://static.grinnell.edu"
 title = "Hugo Themes"
 author = "Steve Francia"
 copyright = "Copyright © 2008–2018, Steve Francia and the Hugo Authors; all rights reserved."
 canonifyurls = false
 paginate = 3
+theme = "hugo-paper"
