--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,5 @@
-baseurl = "https://static.grinnell.edu"
+# baseurl = "https://static.grinnell.edu"
+baseurl = " "
 title = "Hugo Themes"
 author = "Steve Francia"
 copyright = "Copyright © 2008–2018, Steve Francia and the Hugo Authors; all rights reserved."
