--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # baseurl = "https://static.grinnell.edu"
-baseurl = " "
+# baseurl = ""
 title = "Hugo Themes"
 author = "Steve Francia"
 copyright = "Copyright © 2008–2018, Steve Francia and the Hugo Authors; all rights reserved."
